--- a/packages/devtools/src/host/index.html
+++ b/packages/devtools/src/host/index.html
@@ -7,7 +7,7 @@
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>🔐</text></svg>"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E2E SDK Devtools Host</title>
+    <title>e2esdk | Devtools Host</title>
   </head>
   <body>
     <div id="root"></div>
